<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">
        <ImageView
            android:id="@+id/photo_barang"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/tv_nama_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/photo_barang"
            android:textSize="16sp"
            android:fontFamily="@font/segoeui_bold"
            tools:text="@string/nama_barang" />

        <LinearLayout
            android:id="@+id/layout_incremental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/photo_barang"
            android:layout_below="@id/tv_nama_barang"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_kurang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:icon="@drawable/ic_baseline_remove_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="#FFFFFF"
                app:iconTintMode="src_atop"/>

            <TextView
                android:id="@+id/tv_jumlah_beli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/segoeui_bold"
                android:text="@string/jumlah_beli" />

            <Button
                android:id="@+id/btn_tambah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:icon="@drawable/ic_baseline_add_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="#FFFFFF"
                app:iconTintMode="src_atop"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/photo_barang"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_set_pesan"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pesan"
                android:textSize="12sp" />
            <Button
                android:id="@+id/btn_set_hapus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hapus"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>